# synthetic-data

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
misc/: figures.pptx
notebooks/: .gitignore  basic_math_mt.jsonl  synth_by_persona.ipynb  synth_llm_judge.ipynb  synth_persona.ipynb  synthetic_data.ipynb
