[tool.poetry]
name = "synthetic-data"
version = "0.1.0"
description = ""
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "synthetic_data"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
